test/type/pass/stmt_call_args.j
class A {
  Void main() {
    new B().add(1, 3);
    return;
  }
}

class B {
  Void add(Int a, Int b) {
    return;
  }
}
