test/type/fail/if_non_bool.j
class A{
  Void main() {
    if (0) {return;} else {return;}
    return;
  }
}
